# ConwayLifegame

./: .gitignore  CMakeLists.txt  Default_model.pth  Document.md  GUI.py  README.md  build.bat  build.sh  config  config.py  config.txt  evaluate.py  requirements.txt  setup.py  test_windows.py  train.py
Agents/: cell_agent.py
Models/: policy_network.py
Module/Configs/: config.py
Module/Environment/: game_env.py
Module/Models/: policy_network.py
Module/Utils/: experience_replay.py
PyModels/Agent/: cell_agent.py
PyModels/Environment/: game_env.py
PyModels/Models/: policy_network.py
cpp_core/: CMakeLists.txt
cpp_core/include/: cell.h  config_parser.h  game_environment.h  types.h
cpp_core/src/: cell.cpp  config_parser.cpp  game_environment.cpp
cpp_test/: test.cpp
environment/: game_env.py
python_bindings/: CMakeLists.txt  pybind_wrapper.cpp
utils/: experience_replay.py
